--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
+  region: us-east-1
   bucket: $S3_BUCKET
   skip_cleanup: true
   local-dir: dist
